# open-api/immich-openapi-specs.json
@@ -6156,6 +6156,14 @@
             "schema": {
               "type": "boolean"
             }
+          },
+          {
+            "name": "withoutAlbum",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "boolean"
+            }
           }
         ],
         "responses": {
@@ -6278,6 +6286,14 @@
           },
           {
             "name": "withStacked",
+            "required": false,
+            "in": "query",
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "withoutAlbum",
             "required": false,
             "in": "query",
             "schema": {
