# server/src/repositories/asset.repository.ts
@@ -51,8 +51,7 @@ const truncateMap: Record<TimeBucketSize, string> = {
 };
 
 const dateTrunc = (options: TimeBucketOptions) =>
-  `(date_trunc('${
-    truncateMap[options.size]
+  `(date_trunc('${truncateMap[options.size]
   }', (asset."localDateTime" at time zone 'UTC')) at time zone 'UTC')::timestamptz`;
 
 @Instrumentation()
@@ -65,7 +64,7 @@ export class AssetRepository implements IAssetRepository {
     @InjectRepository(SmartInfoEntity) private smartInfoRepository: Repository<SmartInfoEntity>,
     @InjectRepository(PartnerEntity) private partnerRepository: Repository<PartnerEntity>,
     @InjectRepository(AlbumEntity) private albumRepository: Repository<AlbumEntity>,
-  ) {}
+  ) { }
 
   async upsertExif(exif: Partial<ExifEntity>): Promise<void> {
     await this.exifRepository.upsert(exif, { conflictPaths: ['assetId'] });
@@ -746,6 +745,10 @@ export class AssetRepository implements IAssetRepository {
       builder.andWhere(
         new Brackets((qb) => qb.where('stack.primaryAssetId = asset.id').orWhere('asset.stackId IS NULL')),
       );
+    }
+
+    if (options.withoutAlbum) {
+      builder.andWhere('NOT EXISTS (SELECT 1 FROM albums_assets_assets WHERE "assetsId" = asset.id)');
     }
 
     return builder;
